# WimPatch

./: Cargo.toml  NOTICE  README.md  README.zh.md  build.bat  build.rs
locales/: en.yml  ja-JP.yml  zh-CN.yml  zh-TW.yml  zh.yml
resource/: resource.rc
src/: bsdiff.rs  cli.rs  console.rs  interactive.rs  main.rs  manifest.rs  patch.rs  test.rs  utils.rs  wimgapi.rs  zstdiff.rs
